app/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: playground
          image: wil42/playground:v1
          ports:
          - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
