app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: dev
  labels:
    run: app1
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app:  app1
